LexYacc/cc/Image2Header/Image2Header.output
Terminals which are not used

   ASSIGN
   COMMENT_START
   COMMENT_END


State 4 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 12 conflicts: 2 shift/reduce
State 21 conflicts: 1 shift/reduce
State 25 conflicts: 2 shift/reduce
State 47 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: if_condition condition

    2 condition: elseif_condition condition
    3          | else_condition
    4          | /* empty */

    5 elseif_condition: ELSE if_expression body

    6 else_condition: ELSE body

    7 if_condition: if_expression body

    8 if_expression: IF '(' primary_expr ')'

    9 primary_expr: or_expr AND_OP primary_expr
   10             | or_expr
   11             | '(' ID AND_BITOP bitor_expr ')' AND_OP primary_expr
   12             | '(' ID AND_BITOP bitor_expr ')'

   13 bitor_expr: /* empty */
   14           | '(' ID ')'
   15           | '(' ID OR_BITOP bitor_expr ')'
   16           | ID
   17           | ID OR_BITOP ID bitor_expr

   18 or_expr: /* empty */
   19        | '(' single_expr ')'
   20        | single_expr
   21        | '(' single_expr OR_OP or_expr ')'
   22        | single_expr OR_OP or_expr

   23 single_expr: ID EQ_OP ID
   24            | ID NE_OP ID

   25 body: hw_param_statement
   26     | '{' hw_param_statement '}'
   27     | '{' hw_param_statement hw_param_statement '}'

   28 hw_param_statement: hw_param_statement HW_PARAM HW_PARAM
   29                   | HW_PARAM HW_PARAM
   30                   | ';'
   31                   | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 11 12 14 15 19 21
')' (41) 8 11 12 14 15 19 21
';' (59) 30
'{' (123) 26 27
'}' (125) 26 27
error (256)
ID (258) 11 12 14 15 16 17 23 24
HW_PARAM (259) 28 29
EQ_OP (260) 23
NE_OP (261) 24
AND_OP (262) 9 11
AND_BITOP (263) 11 12
OR_OP (264) 21 22
OR_BITOP (265) 15 17
ASSIGN (266)
IF (267) 8
ELSE (268) 5 6
COMMENT_START (269)
COMMENT_END (270)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
condition (23)
    on left: 2 3 4, on right: 1 2
elseif_condition (24)
    on left: 5, on right: 2
else_condition (25)
    on left: 6, on right: 3
if_condition (26)
    on left: 7, on right: 1
if_expression (27)
    on left: 8, on right: 5 7
primary_expr (28)
    on left: 9 10 11 12, on right: 8 9 11
bitor_expr (29)
    on left: 13 14 15 16 17, on right: 11 12 15 17
or_expr (30)
    on left: 18 19 20 21 22, on right: 9 10 21 22
single_expr (31)
    on left: 23 24, on right: 19 20 21 22
body (32)
    on left: 25 26 27, on right: 5 6 7
hw_param_statement (33)
    on left: 28 29 30 31, on right: 25 26 27 28


state 0

    0 $accept: . program $end

    IF  shift, and go to state 1

    program        go to state 2
    if_condition   go to state 3
    if_expression  go to state 4


state 1

    8 if_expression: IF . '(' primary_expr ')'

    '('  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: if_condition . condition

    ELSE  shift, and go to state 7

    $default  reduce using rule 4 (condition)

    condition         go to state 8
    elseif_condition  go to state 9
    else_condition    go to state 10


state 4

    7 if_condition: if_expression . body

    HW_PARAM  shift, and go to state 11
    '{'       shift, and go to state 12
    ';'       shift, and go to state 13

    HW_PARAM  [reduce using rule 31 (hw_param_statement)]
    $default  reduce using rule 31 (hw_param_statement)

    body                go to state 14
    hw_param_statement  go to state 15


state 5

    8 if_expression: IF '(' . primary_expr ')'

    ID   shift, and go to state 16
    '('  shift, and go to state 17

    $default  reduce using rule 18 (or_expr)

    primary_expr  go to state 18
    or_expr       go to state 19
    single_expr   go to state 20


state 6

    0 $accept: program $end .

    $default  accept


state 7

    5 elseif_condition: ELSE . if_expression body
    6 else_condition: ELSE . body

    HW_PARAM  shift, and go to state 11
    IF        shift, and go to state 1
    '{'       shift, and go to state 12
    ';'       shift, and go to state 13

    HW_PARAM  [reduce using rule 31 (hw_param_statement)]
    $default  reduce using rule 31 (hw_param_statement)

    if_expression       go to state 21
    body                go to state 22
    hw_param_statement  go to state 15


state 8

    1 program: if_condition condition .

    $default  reduce using rule 1 (program)


state 9

    2 condition: elseif_condition . condition

    ELSE  shift, and go to state 7

    $default  reduce using rule 4 (condition)

    condition         go to state 23
    elseif_condition  go to state 9
    else_condition    go to state 10


state 10

    3 condition: else_condition .

    $default  reduce using rule 3 (condition)


state 11

   29 hw_param_statement: HW_PARAM . HW_PARAM

    HW_PARAM  shift, and go to state 24


state 12

   26 body: '{' . hw_param_statement '}'
   27     | '{' . hw_param_statement hw_param_statement '}'

    HW_PARAM  shift, and go to state 11
    ';'       shift, and go to state 13

    HW_PARAM  [reduce using rule 31 (hw_param_statement)]
    ';'       [reduce using rule 31 (hw_param_statement)]
    $default  reduce using rule 31 (hw_param_statement)

    hw_param_statement  go to state 25


state 13

   30 hw_param_statement: ';' .

    $default  reduce using rule 30 (hw_param_statement)


state 14

    7 if_condition: if_expression body .

    $default  reduce using rule 7 (if_condition)


state 15

   25 body: hw_param_statement .
   28 hw_param_statement: hw_param_statement . HW_PARAM HW_PARAM

    HW_PARAM  shift, and go to state 26

    $default  reduce using rule 25 (body)


state 16

   23 single_expr: ID . EQ_OP ID
   24            | ID . NE_OP ID

    EQ_OP  shift, and go to state 27
    NE_OP  shift, and go to state 28


state 17

   11 primary_expr: '(' . ID AND_BITOP bitor_expr ')' AND_OP primary_expr
   12             | '(' . ID AND_BITOP bitor_expr ')'
   19 or_expr: '(' . single_expr ')'
   21        | '(' . single_expr OR_OP or_expr ')'

    ID  shift, and go to state 29

    single_expr  go to state 30


state 18

    8 if_expression: IF '(' primary_expr . ')'

    ')'  shift, and go to state 31


state 19

    9 primary_expr: or_expr . AND_OP primary_expr
   10             | or_expr .

    AND_OP  shift, and go to state 32

    $default  reduce using rule 10 (primary_expr)


state 20

   20 or_expr: single_expr .
   22        | single_expr . OR_OP or_expr

    OR_OP  shift, and go to state 33

    $default  reduce using rule 20 (or_expr)


state 21

    5 elseif_condition: ELSE if_expression . body

    HW_PARAM  shift, and go to state 11
    '{'       shift, and go to state 12
    ';'       shift, and go to state 13

    HW_PARAM  [reduce using rule 31 (hw_param_statement)]
    $default  reduce using rule 31 (hw_param_statement)

    body                go to state 34
    hw_param_statement  go to state 15


state 22

    6 else_condition: ELSE body .

    $default  reduce using rule 6 (else_condition)


state 23

    2 condition: elseif_condition condition .

    $default  reduce using rule 2 (condition)


state 24

   29 hw_param_statement: HW_PARAM HW_PARAM .

    $default  reduce using rule 29 (hw_param_statement)


state 25

   26 body: '{' hw_param_statement . '}'
   27     | '{' hw_param_statement . hw_param_statement '}'
   28 hw_param_statement: hw_param_statement . HW_PARAM HW_PARAM

    HW_PARAM  shift, and go to state 35
    '}'       shift, and go to state 36
    ';'       shift, and go to state 13

    HW_PARAM  [reduce using rule 31 (hw_param_statement)]
    '}'       [reduce using rule 31 (hw_param_statement)]

    hw_param_statement  go to state 37


state 26

   28 hw_param_statement: hw_param_statement HW_PARAM . HW_PARAM

    HW_PARAM  shift, and go to state 38


state 27

   23 single_expr: ID EQ_OP . ID

    ID  shift, and go to state 39


state 28

   24 single_expr: ID NE_OP . ID

    ID  shift, and go to state 40


state 29

   11 primary_expr: '(' ID . AND_BITOP bitor_expr ')' AND_OP primary_expr
   12             | '(' ID . AND_BITOP bitor_expr ')'
   23 single_expr: ID . EQ_OP ID
   24            | ID . NE_OP ID

    EQ_OP      shift, and go to state 27
    NE_OP      shift, and go to state 28
    AND_BITOP  shift, and go to state 41


state 30

   19 or_expr: '(' single_expr . ')'
   21        | '(' single_expr . OR_OP or_expr ')'

    OR_OP  shift, and go to state 42
    ')'    shift, and go to state 43


state 31

    8 if_expression: IF '(' primary_expr ')' .

    $default  reduce using rule 8 (if_expression)


state 32

    9 primary_expr: or_expr AND_OP . primary_expr

    ID   shift, and go to state 16
    '('  shift, and go to state 17

    $default  reduce using rule 18 (or_expr)

    primary_expr  go to state 44
    or_expr       go to state 19
    single_expr   go to state 20


state 33

   22 or_expr: single_expr OR_OP . or_expr

    ID   shift, and go to state 16
    '('  shift, and go to state 45

    $default  reduce using rule 18 (or_expr)

    or_expr      go to state 46
    single_expr  go to state 20


state 34

    5 elseif_condition: ELSE if_expression body .

    $default  reduce using rule 5 (elseif_condition)


state 35

   28 hw_param_statement: hw_param_statement HW_PARAM . HW_PARAM
   29                   | HW_PARAM . HW_PARAM

    HW_PARAM  shift, and go to state 47


state 36

   26 body: '{' hw_param_statement '}' .

    $default  reduce using rule 26 (body)


state 37

   27 body: '{' hw_param_statement hw_param_statement . '}'
   28 hw_param_statement: hw_param_statement . HW_PARAM HW_PARAM

    HW_PARAM  shift, and go to state 26
    '}'       shift, and go to state 48


state 38

   28 hw_param_statement: hw_param_statement HW_PARAM HW_PARAM .

    $default  reduce using rule 28 (hw_param_statement)


state 39

   23 single_expr: ID EQ_OP ID .

    $default  reduce using rule 23 (single_expr)


state 40

   24 single_expr: ID NE_OP ID .

    $default  reduce using rule 24 (single_expr)


state 41

   11 primary_expr: '(' ID AND_BITOP . bitor_expr ')' AND_OP primary_expr
   12             | '(' ID AND_BITOP . bitor_expr ')'

    ID   shift, and go to state 49
    '('  shift, and go to state 50

    $default  reduce using rule 13 (bitor_expr)

    bitor_expr  go to state 51


state 42

   21 or_expr: '(' single_expr OR_OP . or_expr ')'

    ID   shift, and go to state 16
    '('  shift, and go to state 45

    $default  reduce using rule 18 (or_expr)

    or_expr      go to state 52
    single_expr  go to state 20


state 43

   19 or_expr: '(' single_expr ')' .

    $default  reduce using rule 19 (or_expr)


state 44

    9 primary_expr: or_expr AND_OP primary_expr .

    $default  reduce using rule 9 (primary_expr)


state 45

   19 or_expr: '(' . single_expr ')'
   21        | '(' . single_expr OR_OP or_expr ')'

    ID  shift, and go to state 16

    single_expr  go to state 30


state 46

   22 or_expr: single_expr OR_OP or_expr .

    $default  reduce using rule 22 (or_expr)


state 47

   28 hw_param_statement: hw_param_statement HW_PARAM HW_PARAM .
   29                   | HW_PARAM HW_PARAM .

    HW_PARAM  reduce using rule 28 (hw_param_statement)
    HW_PARAM  [reduce using rule 29 (hw_param_statement)]
    '}'       reduce using rule 28 (hw_param_statement)
    '}'       [reduce using rule 29 (hw_param_statement)]
    $default  reduce using rule 28 (hw_param_statement)


state 48

   27 body: '{' hw_param_statement hw_param_statement '}' .

    $default  reduce using rule 27 (body)


state 49

   16 bitor_expr: ID .
   17           | ID . OR_BITOP ID bitor_expr

    OR_BITOP  shift, and go to state 53

    $default  reduce using rule 16 (bitor_expr)


state 50

   14 bitor_expr: '(' . ID ')'
   15           | '(' . ID OR_BITOP bitor_expr ')'

    ID  shift, and go to state 54


state 51

   11 primary_expr: '(' ID AND_BITOP bitor_expr . ')' AND_OP primary_expr
   12             | '(' ID AND_BITOP bitor_expr . ')'

    ')'  shift, and go to state 55


state 52

   21 or_expr: '(' single_expr OR_OP or_expr . ')'

    ')'  shift, and go to state 56


state 53

   17 bitor_expr: ID OR_BITOP . ID bitor_expr

    ID  shift, and go to state 57


state 54

   14 bitor_expr: '(' ID . ')'
   15           | '(' ID . OR_BITOP bitor_expr ')'

    OR_BITOP  shift, and go to state 58
    ')'       shift, and go to state 59


state 55

   11 primary_expr: '(' ID AND_BITOP bitor_expr ')' . AND_OP primary_expr
   12             | '(' ID AND_BITOP bitor_expr ')' .

    AND_OP  shift, and go to state 60

    $default  reduce using rule 12 (primary_expr)


state 56

   21 or_expr: '(' single_expr OR_OP or_expr ')' .

    $default  reduce using rule 21 (or_expr)


state 57

   17 bitor_expr: ID OR_BITOP ID . bitor_expr

    ID   shift, and go to state 49
    '('  shift, and go to state 50

    $default  reduce using rule 13 (bitor_expr)

    bitor_expr  go to state 61


state 58

   15 bitor_expr: '(' ID OR_BITOP . bitor_expr ')'

    ID   shift, and go to state 49
    '('  shift, and go to state 50

    $default  reduce using rule 13 (bitor_expr)

    bitor_expr  go to state 62


state 59

   14 bitor_expr: '(' ID ')' .

    $default  reduce using rule 14 (bitor_expr)


state 60

   11 primary_expr: '(' ID AND_BITOP bitor_expr ')' AND_OP . primary_expr

    ID   shift, and go to state 16
    '('  shift, and go to state 17

    $default  reduce using rule 18 (or_expr)

    primary_expr  go to state 63
    or_expr       go to state 19
    single_expr   go to state 20


state 61

   17 bitor_expr: ID OR_BITOP ID bitor_expr .

    $default  reduce using rule 17 (bitor_expr)


state 62

   15 bitor_expr: '(' ID OR_BITOP bitor_expr . ')'

    ')'  shift, and go to state 64


state 63

   11 primary_expr: '(' ID AND_BITOP bitor_expr ')' AND_OP primary_expr .

    $default  reduce using rule 11 (primary_expr)


state 64

   15 bitor_expr: '(' ID OR_BITOP bitor_expr ')' .

    $default  reduce using rule 15 (bitor_expr)
